test/Fail/Issue4586WhereInLet.err
Issue4586WhereInLet.agda:6,15-28: error: [GenericError]
'where' clauses not allowed in let bindings
when scope checking
let x = Set
      where
        y = Set
in Set
